# gushwork-sdr

./: .env.example  .gitignore  Dockerfile  PIPELINE.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  test_brain.py
app/: __init__.py  config.py  main.py  schemas.py
app/agent/: graph.py  prompts.py  retell_handler.py
app/routes/: retell.py  tools.py  widget.py
app/tools/: audit.py  calendar.py  crm.py
widget/: index.html
