[project]
name = "gushwork-sdr"
version = "1.0.0"
description = "Gushwork Inbound AEO Voice Agent — Sub-500ms latency voice SDR"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "google-genai",
    "langgraph>=0.4.0",
    "langchain-google-genai>=2.1.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.2.0",
    "retell-ai>=4.0.0",
    "httpx>=0.28.0",
    "python-dateutil>=2.9.0",
    "websockets>=14.0",
    "jinja2>=3.1.0",
    "rich>=13.9.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
